// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailResult should not render a non existent component 1`] = `""`;

exports[`MapDetailResult should render adressen ligplaats 1`] = `
<MapDetailAdressenLigplaats
  ligplaats={
    Object {
      "endpointType": "bag/ligplaats/",
      "label": "value",
      "status": Object {
        "description": "description",
      },
    }
  }
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render adressen nummeraanduiding 1`] = `
<MapDetailAdressenVerblijfsobject
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  verblijfsobject={
    Object {
      "endpointType": "bag/nummeraanduiding/",
      "label": "value",
      "status": Object {
        "description": "description",
      },
    }
  }
/>
`;

exports[`MapDetailResult should render adressen openbareruimte 1`] = `
<MapDetailPanel
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  result={
    Object {
      "items": Array [
        Object {
          "label": "Naam 24-posities (NEN)",
          "value": undefined,
        },
      ],
      "subTitle": "value",
      "title": undefined,
    }
  }
/>
`;

exports[`MapDetailResult should render adressen pand 1`] = `
<MapDetailAdressenPand
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  pand={
    Object {
      "endpointType": "bag/pand/",
      "label": "value",
      "status": Object {
        "description": "description",
      },
    }
  }
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render adressen standplaats 1`] = `
<MapDetailAdressenStandplaats
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  standplaats={
    Object {
      "endpointType": "bag/standplaats/",
      "label": "value",
      "status": Object {
        "description": "description",
      },
    }
  }
/>
`;

exports[`MapDetailResult should render adressen verblijfsobject 1`] = `
<MapDetailAdressenVerblijfsobject
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  verblijfsobject={
    Object {
      "endpointType": "bag/verblijfsobject/",
      "label": "value",
      "status": Object {
        "description": "description",
      },
    }
  }
/>
`;

exports[`MapDetailResult should render bedrijfsinvesteringszone 1`] = `
<MapDetailPanel
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  result={
    Object {
      "items": Array [
        Object {
          "label": "Type",
          "value": undefined,
        },
        Object {
          "label": "Heffingsgrondslag",
          "value": undefined,
        },
        Object {
          "label": "Jaarlijkse heffing",
          "value": undefined,
        },
        Object {
          "label": "Aantal heffingsplichtigen",
          "value": undefined,
        },
      ],
      "subTitle": "value",
      "title": "bedrijfsinvesteringszone",
    }
  }
/>
`;

exports[`MapDetailResult should render de parkeervak 1`] = `
<MapDetailPanel
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  result={
    Object {
      "items": Array [
        Object {
          "label": "Straat",
          "value": undefined,
        },
        Object {
          "label": "Type",
          "value": undefined,
        },
        Object {
          "label": "Bord",
          "value": undefined,
        },
      ],
      "subTitle": "value",
      "title": "Parkeervak",
    }
  }
/>
`;

exports[`MapDetailResult should render de parkeerzone  1`] = `
<MapDetailPanel
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  result={
    Object {
      "items": Array [
        Object {
          "label": "Omschrijving",
          "multiLine": true,
          "value": "value",
        },
      ],
      "subTitle": "value",
      "title": "Parkeervergunninggebied",
    }
  }
/>
`;

exports[`MapDetailResult should render de parkeerzone uitz  1`] = `
<MapDetailPanel
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  result={
    Object {
      "items": Array [
        Object {
          "label": "Omschrijving",
          "multiLine": true,
          "value": "value",
        },
      ],
      "subTitle": "value",
      "title": "Uitzondering parkeervergunninggebied",
    }
  }
/>
`;

exports[`MapDetailResult should render explosieven gevrijwaard gebied 1`] = `
<MapDetailExplosievenGevrijwaardGebied
  gevrijwaardGebied={
    Object {
      "endpointType": "milieuthemas/explosieven/gevrijwaardgebied/",
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render explosieven inslag 1`] = `
<MapDetailPanel
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  result={
    Object {
      "items": Array [
        Object {
          "label": "Datum van inslag",
          "value": undefined,
        },
        Object {
          "label": "Soort handeling",
          "value": undefined,
        },
        Object {
          "label": "Bron",
          "multiLine": true,
          "value": undefined,
        },
        Object {
          "label": "Opmerkingen",
          "value": undefined,
        },
      ],
      "subTitle": "value",
      "title": "Inslag",
    }
  }
/>
`;

exports[`MapDetailResult should render explosieven uitgevoerd onderzoek 1`] = `
<MapDetailExplosievenUitgevoerdOnderzoek
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  uitgevoerdOnderzoek={
    Object {
      "endpointType": "milieuthemas/explosieven/uitgevoerdonderzoek/",
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render explosieven verdacht gebied 1`] = `
<MapDetailExplosievenVerdachtGebied
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  verdachtGebied={
    Object {
      "endpointType": "milieuthemas/explosieven/verdachtgebied/",
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render gebieden bouwblok 1`] = `
<MapDetailPanel
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  result={
    Object {
      "items": Array [],
      "subTitle": "value",
      "title": "Bouwblok",
    }
  }
/>
`;

exports[`MapDetailResult should render gebieden buurt 1`] = `
<MapDetailGebiedenBuurt
  buurt={
    Object {
      "endpointType": "gebieden/buurt/",
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render gebieden gebiedsgericht-werken 1`] = `
<MapDetailGebiedenGebiedsgerichtWerken
  gebiedsgerichtWerken={
    Object {
      "endpointType": "gebieden/gebiedsgerichtwerken/",
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render gebieden grootstedelijk 1`] = `
<MapDetailGebiedenGrootstedelijk
  grootstedelijk={
    Object {
      "endpointType": "gebieden/grootstedelijkgebied/",
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render gebieden stadsdeel 1`] = `
<MapDetailGebiedenStadsdeel
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  stadsdeel={
    Object {
      "endpointType": "gebieden/stadsdeel/",
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render gebieden unesco 1`] = `
<MapDetailGebiedenUnesco
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  unesco={
    Object {
      "endpointType": "gebieden/unesco/",
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render gebieden wijk 1`] = `
<MapDetailGebiedenWijk
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  wijk={
    Object {
      "endpointType": "gebieden/buurtcombinatie/",
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render grondexploitatie 1`] = `
<MapDetailPanel
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  result={
    Object {
      "items": Array [
        Object {
          "label": "Nummer",
          "value": undefined,
        },
        Object {
          "label": "Startdatum",
          "value": undefined,
        },
        Object {
          "label": "Fase",
          "value": undefined,
        },
        Object {
          "label": "Totale begroting baten",
          "value": undefined,
        },
        Object {
          "label": "Totale begroting kosten",
          "value": undefined,
        },
        Object {
          "label": "Verschil",
          "value": undefined,
        },
      ],
      "notification": "Medewerkers/ketenpartners van Gemeente Amsterdam kunnen inloggen om grondexploitaties te bekijken.",
      "subTitle": "value",
      "title": "Grondexploitatie",
    }
  }
/>
`;

exports[`MapDetailResult should render kadastraal object 1`] = `
<MapDetailPanel
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  result={
    Object {
      "items": Array [
        Object {
          "label": "Kadastrale gemeente",
          "value": false,
        },
        Object {
          "label": "Gemeente",
          "value": false,
        },
        Object {
          "label": "Grootte",
          "value": undefined,
        },
      ],
      "subTitle": "value",
      "title": "Kadastraa object",
    }
  }
/>
`;

exports[`MapDetailResult should render meetbout 1`] = `
<MapDetailPanel
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  result={
    Object {
      "items": Array [
        Object {
          "label": "Adres",
          "value": undefined,
        },
        Object {
          "label": "Zaksnelheid (mm/j)",
          "value": undefined,
        },
      ],
      "subTitle": "value",
      "title": "Meetbout",
    }
  }
/>
`;

exports[`MapDetailResult should render monument 1`] = `
<MapDetailPanel
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  result={
    Object {
      "items": Array [
        Object {
          "label": "Nummer",
          "value": undefined,
        },
        Object {
          "label": "Type",
          "value": undefined,
        },
        Object {
          "label": "Status",
          "value": undefined,
        },
      ],
      "subTitle": "value",
      "title": "Monument",
    }
  }
/>
`;

exports[`MapDetailResult should render nap peilmerk 1`] = `
<MapDetailPanel
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  result={
    Object {
      "items": Array [
        Object {
          "label": "Hoogte NAP",
          "value": undefined,
        },
        Object {
          "label": "Omschrijving",
          "multiLine": true,
          "value": undefined,
        },
        Object {
          "label": "Windrichting",
          "value": undefined,
        },
        Object {
          "label": "Muurvlakcoördinaten (cm)",
          "value": undefined,
        },
      ],
      "subTitle": "value",
      "titel": "NAP Peilmerk",
    }
  }
/>
`;

exports[`MapDetailResult should render oplaadpuntent 1`] = `
<MapDetailPanel
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  result={
    Object {
      "items": Array [
        Object {
          "label": "Adres",
          "value": undefined,
        },
        Object {
          "label": "Aantal",
          "value": undefined,
        },
        Object {
          "label": "Soort",
          "value": undefined,
        },
        Object {
          "label": "Capaciteit",
          "value": undefined,
        },
        Object {
          "label": "Connectortype",
          "value": undefined,
        },
        Object {
          "label": "Status",
          "value": undefined,
        },
      ],
      "subTitle": "value",
      "title": "Oplaadpunt",
    }
  }
/>
`;

exports[`MapDetailResult should render vastgoed 1`] = `""`;

exports[`MapDetailResult should render vestiging 1`] = `
<MapDetailVestiging
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  vestiging={
    Object {
      "endpointType": "handelsregister/vestiging/",
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render winkelgebieden 1`] = `""`;
